# sermon-transcribe

./: .gitignore  PROJECT_FAMILIARIZATION.md  README.md  build.sh  pyinstaller.spec  pyproject.toml  transcribe.py
res/: transcribe.afdesign  transcribe.icns
res/transcribe.iconset/: Contents.json
