[project]
name = "sermon-transcribe"
version = "0.1.0"
description = "Assist in transcribing a sermon using whisper.cpp"
authors = [
    {name = "Ted Carnahan",email = "ted@tedcarnahan.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "python-vlc (>=3.0.21203,<4.0.0)",
    "python-ffmpeg (>=2.0.12,<3.0.0)",
    "pyside6 (>=6.8.2.1,<7.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
